Add more info to abstract in final report

--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -19,10 +19,8 @@
 
 \begin{abstract}
 This report describes the development of an augmented reality game
-for the TU Delft. This game, called the \emph{Augmented Reality Mirror Game},
-is a game that uses augmented reality technology to simulate lasers, mirrors,
-a target (or multiple targets), and walls. The goal of this game is to use
-mirrors to deflect the laser beam coming from the laser to the target.
+by students of the Delft University of Technology. This game, called the \emph{Augmented Reality Mirror Game},
+is a game that uses augmented reality technology to simulate lasers and objects with optical properties like mirrors and beam splitters. The goal of this game is to use these objects to route one or more laser beams from emitters to targets. Collaboration is an essential aspect of the game. Different players have distinct capabilities to manipulate the game world and solve the puzzles.
 %TODO: add description of the chapters.
 \end{abstract}
 \tableofcontents
