--- a/Reports/Final Report/Implementation.tex
+++ b/Reports/Final Report/Implementation.tex
@@ -313,8 +313,11 @@
                                        have rotated an object. This message is 
                                        forwarded to all connected clients by the
                                        server.
+\item[Level Update] Sent by players as soon as they consider the level to be finished. The server broadcasts it to the other clients to change the server.                                       
+                                       
                 \item[Ping Message]    Sent by the server and clients to indicate 
                                        they are still connected and listening.
+                                      
             \end{description}
         
         \subsection{The master camera} \label{ssec:mastercamera}
