--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -173,7 +173,7 @@
 		\subsection{Programming the basic game} \label{ssec:basics}
 			The next two weeks revolved around creating game objects and game play.
 			After some testing with markers and AR glasses, as well game objects, a 
-			first demo was also developed during this time. This phase also saw unit testing of g
+			first demo was also developed during this time. This phase also saw unit testing of game
 			elements, as well as heavy usage of StyleCop and SonarQube to clean up
 			respectively reorganized code in order to deliver clean code to SIG, for our first
 			submission.  
