--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -1,6 +1,7 @@
 \chapter{Orientation} \label{cha:orientation}
 \pagenumbering{arabic}
-	This chapter provides an overview of the orientation phase of the project.
+	This chapter provides an overview of the orientation phase of the project,
+	as well as giving an overview of the entire process of the project from start to finish.
 	It shows an analysis of the project requirements, and the decisions that
 	have been made during the project regarding choices of frameworks and
 	libraries as well as game play elements. It also functions as a thorough
@@ -19,7 +20,7 @@
 		workload in a physical and an AR environment. The game is to be employed
 		as an approximation of collaboratively solving complex problems, as they
 		occur in crime scene investigation when using virtual co-location, i.e.
-		expert remote crime scene experts to guide local investigators in
+		remote crime scene experts to guide local investigators in
 		AR to collaboratively analyze the crime scene.
 
 	\section{Final Product} \label{sec:finalproduct}
@@ -55,10 +56,6 @@
 			\item Physically co-located players each get only a part of the
 			mirror bases required to solve the puzzle, requiring input
 			from all of these players.
-			\item If there are multiple physically remote players, each of
-			these can only rotate a subset of the mirrors, and
-			as such input from all physically remote players is
-			required for solving the puzzle.
 			\item Physically remote players have the ability to rotate
 			mirrors while the physically co-located players do not have
 			this ability, requiring input from both physically co-located
@@ -67,7 +64,7 @@
 	
 	\section{Software Design Methods} \label{sec:designmethods}
 		This section describes the design methods that were used during the
-		project. It illustrates the methodology that wasere d to develop and
+		project. It illustrates the methodology that was used to develop and
 		coordinate the project during the development phase.
 	
 		\subsection{Design Process} \label{ssec:designprocess}
