Done with Orientation for now.

--- a/Reports/Final Report/Bibliography.bib
+++ b/Reports/Final Report/Bibliography.bib
@@ -20,6 +20,12 @@ publisher = "Taylor and Francis",
 year      = 2003
 }
 
+@book{scrum,
+title     = "The Scrum Guide: the definitive guide to Scrum, the rules of the game",
+author    = "Sutherland, Jeff and Schwaber, Ken",
+year      = 2013
+}
+
 % An article describing collaboration in games.
 @article{zagal,
 title   = "Collaborative games: lessons learned from board games.",
