--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -76,12 +76,10 @@
 			and Augmented Reality glasses are mostly still in development, and as
 			such this may affect the technical viability of each device.
 			
-			To deal with such changes, we use the Scrum methodology. This
+			To deal with such changes, we use the Scrum methodology \cite{scrum}. This
 			methodology describes a set of rules that, amongst others, makes it
 			easier to deal with various changes during the development process.
-			For a complete description of the rules that the Scrum methodology
-			describes, please refer to the Scrum guide, available at
-			\url{http://www.scrumguides.org/scrum-guide.html}. The methodology
+			The methodology
 			in graph form can be seen in \ref{fig:scrum}. The methodology
 			shown is nearly identical to what we use, the only 
 			exception being that our sprints only last one week instead of two.
@@ -130,7 +128,8 @@
 			documentation as well as other factors. SonarQube is a platform that
 			unifies the reports from these tools and provides a clean overview of the
 			combined issues found by FxCop and StyleCop, as well as some simple metrics
-			SonarQube has built-in.
+			SonarQube has built-in. Further detail about maintaining code quality
+			is described in the QA section of the report, chapter 4.
 			
 		\subsection{Design Architecture} \label{ssec:designarchitecture}
 			Because the product is a game and the goal of the project is more
@@ -172,7 +171,7 @@
 			After some testing with markers and AR glasses, as well game objects, a 
 			first demo was also developed during this time. This phase also saw unit testing of game
 			elements, as well as heavy usage of StyleCop and SonarQube to clean up
-			respectively reorganized code in order to deliver clean code to SIG, for our first
+			respectively reorganize code in order to deliver clean code to SIG, for our first
 			submission.  
 		
 		\subsection{The OpenCV server} \label{ssec:firstdemo}
