Add interests and contributions to InfoSheet

--- a/Reports/InfoSheet.tex
+++ b/Reports/InfoSheet.tex
@@ -24,9 +24,9 @@ While augmented reality research has grown into a mature field over the last yea
 \textit{Interests:}\\
 \textit{Contribution and role:} lead software architecture\\
 \\
-\textit{Name:} Alexander Overvoorde\\
-\textit{Interests:}\\
-\textit{Contribution and role:} back-end developer, server developer\\
+\textit{Name:} Alexander Overvoorde (overv161@gmail.com)\\
+\textit{Interests:} Computer Graphics, Software Engineering\\
+\textit{Contribution and role:} remote player visualization, game mechanics, server computer vision\\
 \\
 \textit{Name:} Tim van Rossum (trvanrossum@gmail.com)\\
 \textit{Interests:} Algorithm Design, Software Engineering \\
