Small fix required in Final Report.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -239,7 +239,7 @@
 				\hline
 				Weeks             & 1      & 2      & 3      & 4      & 5      & 6      & 7      & 8      & 9      & 10     \\ \hline
 				Research          & X      & X      & \space & \space & \space & \space & \space & \space & \space & \space \\ \hline
-				Final report      & \space & \space & \space & X     & X      & X      & X      & X      & X      & \space \\ \hline\sqrt{}
+				Final report      & \space & \space & \space & X      & X      & X      & X      & X      & X      & \space \\ \hline
 				Networking        & X      & X      & \space & \space & X      & X      & X      & \space & X      & \space \\ \hline
 				Augmented reality & \space & \space & \space & X      & X      & X      & X      & X      & \space & \space \\ \hline
 				Game elements     & X      & X      & X      & X      & \space & \space & \space & \space & \space & \space \\ \hline
