--- a/Reports/InfoSheet.tex
+++ b/Reports/InfoSheet.tex
@@ -17,7 +17,7 @@ While augmented reality research has grown into a mature field over the last yea
 
 \section*{Members of the project team}
 \textit{Name:} Thijs Boumans\\
-\textit{Interests:}\\
+\textit{Interests:Computer Graphics, Algorithm}\\
 \textit{Contribution and role:} front-end developer\\
 \\
 \textit{Name:} Patrick Kramer\\
