--- a/Reports/InfoSheet.tex
+++ b/Reports/InfoSheet.tex
@@ -18,11 +18,11 @@ While augmented reality research has grown into a mature field over the last yea
 \section*{Members of the project team}
 \textit{Name:} Thijs Boumans\\
 \textit{Interests:}\\
-\textit{Contribution and role:} front-end developer\\
+\textit{Contribution and role:} front-end developer \\
 \\
-\textit{Name:} Patrick Kramer\\
-\textit{Interests:}\\
-\textit{Contribution and role:} lead software architecture\\
+\textit{Name:} Patrick Kramer (ptrck.krmr@gmail.com) \\
+\textit{Interests:} Software Engineering, Quality Assurance \\
+\textit{Contribution and role:} Lead Software Architecture, AR Projection Mechanics \\
 \\
 \textit{Name:} Alexander Overvoorde (overv161@gmail.com)\\
 \textit{Interests:} Computer Graphics, Software Engineering\\
