Finished the process description in the final report.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -227,8 +227,12 @@
 		 
 		\subsection{Wrapping up}
 			At the end of week 10, the final report had to be handed in. This meant
-			that the project had to be wrapped up.
-		 
+			that the project had to be wrapped up. The main activity in this week
+			was testing with other users (the client and a few volunteers), as
+			well as checking the final report before it had to be handed in.
+			Also, the info sheet was written in this week, as it is required
+			to have that checked before the final report can be handed in.
+					 
 		\subsection{The process table} \label{ssec:processtable}
 			The following table gives a nice and short overview regarding what was done
 			every week. An X in a particular subproject and week means that, during that
@@ -239,12 +243,12 @@
 				\hline
 				Weeks             & 1      & 2      & 3      & 4      & 5      & 6      & 7      & 8      & 9      & 10     \\ \hline
 				Research          & X      & X      & \space & \space & \space & \space & \space & \space & \space & \space \\ \hline
-				Final report      & \space & \space & \space & X      & X      & X      & X      & X      & X      & \space \\ \hline
-				Networking        & X      & X      & \space & \space & X      & X      & X      & \space & X      & \space \\ \hline
+				Final report      & \space & \space & \space & X      & X      & X      & X      & X      & X      & X \\ \hline
+				Networking        & X      & X      & \space & \space & X      & X      & X      & \space & X      & X \\ \hline
 				Augmented reality & \space & \space & \space & X      & X      & X      & X      & X      & \space & \space \\ \hline
 				Game elements     & X      & X      & X      & X      & \space & \space & \space & \space & \space & \space \\ \hline
-				Testing           & \space & \space & X      & X      & X      & X      & X      & X      & \space & \space \\ \hline
+				Testing           & \space & \space & X      & X      & X      & X      & X      & X      & \space & X \\ \hline
 				Projection        & \space & \space & \space & X      & X      & X      & X      & X      & X      & \space \\ \hline
-				Level design      & \space & \space & \space & \space & \space & \space & \space & X      & X      & \space \\ \hline
+				Level design      & \space & \space & \space & \space & \space & \space & \space & X      & X      & X \\ \hline
 				\end{tabular}
 			\end{table}
