Add new project description to infosheet

--- a/Reports/InfoSheet.tex
+++ b/Reports/InfoSheet.tex
@@ -13,7 +13,29 @@
 \textbf{Final report:} TBA.\\
 
 \section*{Description of the project}
-While augmented reality research has grown into a mature field over the last years, the aspects of situational awareness and presence of augmented reality (AR) are still quite open research topics. This project is about designing and implementing a collaborative game to explore the different perception of situational awareness, presence and workload in a physical and an AR environment. The game is to be employed as an approximation of collaboratively solving complex problems, as they occur in crime scene investigation when using virtual co-location, i.e. expert remote crime scene investigators to guide local investigators in AR to collaboratively analyse the crime scene. The goal of the game is to jointly guide a laser beam from its source to its target, mainly by using mirrors to deflect the laser beam to its goal. The rules of the game are designed to require collaboration of the different players. While the shared goal is guide the laser from source to target, remote players can only rotate mirrors, not move them, and vice versa for local players. Individual expertise is mimicked by the ability to either move or rotate mirrors, and shared expertise is mimicked by being able to get to the goal using movement and rotation of markers. These rules are to be considered as initial set of rules, but can be altered to create more intensive game play experiences. It has, though, to be possible to play the game with at least three players in two environments: 1. Physical environment: all players are present in the same location and collaboratively guide a laser beam from emitter to target. 2. AR environment: at least two players are present at the same location (physically co-located). At least one player is physically remote but virtually co-located. The game has to be developed in Unity3D. On the hardware side, AR optical see-through devices such as the META One are provided for the local players. For the remote player(s), Oculus Rift in combination with a Leap Motion might be used, but this is optional. 
+Although augmented reality research has grown into a mature field over the last
+years, the aspects of situational awareness and presence of augmented reality
+are still open research topics. The mirrors AR game is a collaborative game that
+can be used to explore different perceptions of situational awareness and the
+effect on solving spatial puzzles. \\
+\\
+Players have to guide one or more laser beams from emitters to targets by
+placing mirrors inside a level. Each level poses new challenges by including
+walls and optical components like beam splitters. \\
+\\
+There are two kinds of players: local and remote. Local players wear see-through
+AR glasses and see the level projected onto a surface in a room. They can walk
+around and place so-called markers on the table to indicate where in the level
+they want to place a mirror. Remote players are not physically co-located and
+see just the level and mirrors on their computer screen. However, only they have
+the power to rotate mirrors and a good overview of the entire level. The players
+will need to cooperate to get all of the mirrors in the right places with the
+correct orientation to complete the level. \\
+\\
+The game can support any number of players as long as there's at least one local
+and one remote player. The mechanics and restrictions of the game can be
+controlled to research the effects on collaboration. For example, the viewpoint
+of local players can be shown or hidden to remote players.
 
 \section*{Members of the project team}
 \textit{Name:} Thijs Boumans\\
