Add challenges & research results to info sheet

--- a/Reports/InfoSheet.tex
+++ b/Reports/InfoSheet.tex
@@ -19,9 +19,18 @@ are still open research topics. The mirrors AR game is a collaborative game that
 can be used to explore different perceptions of situational awareness and the
 effect on solving spatial puzzles. \\
 \\
-Players have to guide one or more laser beams from emitters to targets by
-placing mirrors inside a level. Each level poses new challenges by including
-walls and optical components like beam splitters. \\
+The main challenge of this project was to develop a system that intuitively lets
+co-located and remote players work together on a problem. Most of the research
+phase was dedicated to finding the elements that make this feasible. For
+example, we gave each player limited abilities so that they're forced to work
+together to reach a solution. That way no player will feel like they're
+expendable. The biggest issue we ran into is that the AR glasses we're using
+have abysmal tracking performance, which made it more difficult for local
+players to be immersed.
+\\
+In the game players have to guide one or more laser beams from emitters to
+targets by placing mirrors inside a level. Each level poses new challenges by
+including walls and optical components like beam splitters. \\
 \\
 There are two kinds of players: local and remote. Local players wear see-through
 AR glasses and see the level projected onto a surface in a room. They can walk
