Added the mail of Thijs.

--- a/Reports/InfoSheet.tex
+++ b/Reports/InfoSheet.tex
@@ -47,7 +47,7 @@ controlled to research the effects on collaboration. For example, the viewpoint
 of local players can be shown or hidden to remote players.
 
 \section*{Members of the project team}
-\textit{Name:} Thijs Boumans\\
+\textit{Name:} Thijs Boumans (T.Boumans-1@student.tudelft.nl)\\
 \textit{Interests:} Computer Graphics, Algorithm Design \\
 \textit{Contribution and role:} Front-end Developer \\
 \\
