Switch-to-another-branch commit.

--- a/Reports/Final Report/QualityAssurance.tex
+++ b/Reports/Final Report/QualityAssurance.tex
@@ -216,5 +216,7 @@
 		as appendices \ref{app:sig1} and \ref{app:sig2}, respectively.
 		
 	\section{Demo's and playtesting sessions} \label{sec:demos}
-		%TODO Write about the demo with the client.
-		...
+		In order to see how other people would interact with our software (and
+		also partially to see if solving the game actually required collaboration
+		of multiple people), some play testing sessions and demo's with the
+		client were hosted. Because of time constraints, 
